<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>be.witmoca</groupId>
	<artifactId>BEATs</artifactId>
	<version>2.3.0</version>
	<packaging>jar</packaging>

	<name>BEATs (Burning Ember Archival Tool Suite)</name>
	<url>https://github.com/witmoca/BEATs</url>
	<description>A song-metadata archive and playlist tool. Successor to the WWDB project.</description>
	<inceptionYear>2018</inceptionYear>

	<licenses>
		<license>
			<name>Apache v2.0 License</name>
			<url>https://github.com/witmoca/BEATs/blob/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>


	<developers>
		<developer>
			<id>witmoca</id>
			<name>Jente Heremans</name>
			<email>jente@witmoca.be</email>
			<url>https://github.com/witmoca</url>
			<timezone>+1</timezone>
			<roles>
				<role>Project Manager</role>
				<role>Chief Codemonkey</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.3.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.41.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<!-- Keep 'legal' files -->
				<directory>${basedir}</directory>
				<includes>
					<include>LICENSE</include>
					<include>WWDB_LICENSE.MIT</include>
					<include>NOTICE</include>
				</includes>
			</resource>

			<!-- Blind copy for all resource folders except /Filtered/* -->
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/Filtered/**</exclude>
				</excludes>
			</resource>

			<!-- Copy /Filtered/* after filtering -->
			<resource>
				<directory>src/main/resources/Filtered</directory>
				<targetPath>Filtered</targetPath>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<!-- Maven compiler -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.21</source>
					<target>1.21</target>
				</configuration>
			</plugin>

			<!-- Assemble everything into a stand-alone package (not including jre's) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>create-standalone</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>be.witmoca.BEATs.ApplicationManager</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<!-- Do not change name of jar by adding the assemblyId to it -->
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Copy resources on the correct phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<!-- Copy main resources -->
					<execution>
						<id>default-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>resources</goal>
						</goals>
					</execution>
					<!-- Copy test resources -->
					<execution>
						<id>default-testResources</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testResources</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includeEmptyDirs>false</includeEmptyDirs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
